Fix l1-output-null